# ModernRootTools

./: README.md  README.rst  cspell.config.yaml  cspell.json  poetry.toml  pyproject.toml
.cspell/: custom-dictionary.txt
.github/.workflows/: docs.yaml
conda/: INSTALL.md  env-my-base.yaml  environment.yaml  mamba_create.sh  mamba_create_env.sh  pkgs-root622-py39.txt  pkgs-root624-py310.txt  pkgs-root624-py39.txt  pkgs-root626-py310.txt  pkgs-root626-py311.txt  remove_envs.sh
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
example/: analysis.histos.yaml  analysis.py  test.py
examples/: check_weights.py  check_weights_in_json.py  ex01_plot01.py  example01.histos.yaml  example01.py  make_nanoNtuple.py  plot01.py  thstack.py
examples/samples/: MetLepEnergy_nanoNtuple_v6.yaml  Met_nanoNtuple_v5.yaml  Met_nanoNtuple_v7.yaml  NanoAODv9_private.yaml
slurm/: all_check_weights.sh  all_ex01.sh
src/mrtools/: analysis.py  cache.py  cli.py  config.py  configuration.py  cutinterpreter.py  datasets.py  distributed.py  exceptions.py  model.py  mrtools.toml  plotter.py  plotting.py  samples.py  samplescache.py  utilities.py  utils.py
src/mrtools/commands/: fix.py  list.py  new.py  plot.py  prun.py  run.py
tests/: test_model.py  test_mrtools.py
