[tool.poetry]
name = "mrtools"
version = "0.2.0"
description = "Modern ROOT Tools for CMS Analysis using RDataFrames"
authors = ["Dietrich Liko <Dietrich.Liko@oeaw.ac.at>"]
readme = "README.md"
packages = [{include = "mrtools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
ruamel-yaml = "^0.17.21"
correctionlib = "^2.2.2"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
mypy = "^1.1.1"
isort = "^5.12.0"

[tool.poetry.scripts]
mrtools = "mrtools.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
